--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "react-in-rails-demo",
   "private": true,
+  "engines": {
+    "node": "^16.17"
+  },
   "dependencies": {
     "@babel/preset-react": "^7.16.7",
     "@rails/actioncable": "^6.0.0",
