--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-in-rails-demo",
   "private": true,
   "engines": {
-    "node": "^16.17"
+    "node": "^16.14"
   },
   "dependencies": {
     "@babel/preset-react": "^7.16.7",
@@ -11,9 +11,11 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "bootstrap": "5.1.3",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "5",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
